@startuml System
!include ../../includes/thesis_theme.puml

left to right direction
skinparam nodesep 25
skinparam ranksep 30

' ============================================================================
' SYSTEM CLASS
' ============================================================================
class System {
    + name: str
    + t: float
    + is_initialized: bool
    --
    + algorithm: Algorithm
    ==
    .. Registration ..
    + add_component(comp)
    + add_connection(conn)
    + add_event_connection(ev_conn)
    .. Algorithm ..
    + set_algorithm(algorithm)
    .. Lifecycle ..
    + initialize(t0)
    + run(t0, tf, dt)
    + reset()
}

' ============================================================================
' CONNECTION DATACLASSES (forced into one column)
' ============================================================================
together {
    abstract class CoSimComponent <<ABC>>

    class Connection <<dataclass>> {
        + src_comp, src_port: str
        + dst_comp, dst_port: str
        --
        + key(): tuple
    }

    class EventConnection <<dataclass>> {
        + src_comp, src_port: str
        + dst_comp, dst_port: str
        --
        + key(): tuple
    }


    abstract class Algorithm <<ABC>> {
        + step(system, t, dt)
    }
}

' ============================================================================
' RELATIONS
' ============================================================================
System "1" o-up-> "*" CoSimComponent   : manages
System "1"  -up->  "1" Algorithm       : delegates stepping
System "1" o-down-> "*" Connection       : contains
System "1" o-down-> "*" EventConnection  : contains


' Connection      ..> CoSimComponent : references by name
' EventConnection ..> CoSimComponent : references by name

@enduml
